# django-getpaid-payu

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements_test.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: run_tox.yml
example/: README.md
example/example/: settings.py
example/orders/: admin.py  models.py  signals.py  views.py
example/orders/migrations/: 0001_initial.py
example/paywall/: models.py  views.py
example/paywall/migrations/: 0002_auto_20200419_1508.py
getpaid_payu/: __init__.py  apps.py  client.py  processor.py  types.py  urls.py  views.py
tests/: conftest.py  factories.py  settings.py  test_client.py  test_getpaid_paynow.py  test_getpaid_payu.py
